--- a/project.properties
+++ b/project.properties
@@ -11,8 +11,8 @@
 #proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard-project.txt
 
 # Project target.
-target=android-16
-android.library.reference.1=..\\appcompat_v7_2
-android.library.reference.3=../../My Documents/ioio/App-IOIO0502/IOIOLib/target/android
-android.library.reference.4=../../My Documents/ioio/App-IOIO0502/IOIOLibBT
-android.library.reference.2=../IOIOLibAccessory
+target=android-14
+android.library.reference.1=..\\..\\..\\..\\Developer\\App-IOIO0503\\IOIOLibAccessory
+android.library.reference.3=..\\..\\..\\..\\Developer\\App-IOIO0503\\IOIOLibBT
+android.library.reference.2=..\\..\\..\\..\\Developer\\App-IOIO0503\\IOIOLib\\target\\android
+android.library.reference.4=../../android-sdks/extras/android/support/v7/appcompat
